--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ build-backend = "pdm.backend"
 
 [project]
 name = "safety_checker"
-dynamic = ["dependencies"]
-
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
+dependencies = [
+    "Pillow",
+    "diffusers",
+    "tqdm",
+    "transformers",
+]
