Add a version number to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "pdm.backend"
 
 [project]
 name = "safety_checker"
+version = 0.1
 dependencies = [
     "Pillow",
     "diffusers",
